# VTT

./: LICENSE  README.md  VTT.py  VTT1.1.py  main.py  pyproject.toml  requirements.txt
video_to_text/: __main__.py
video_to_text_VTT/: __main__.py
