[tool.poetry]
name = "video_to_text_VTT"
version = "0.1.0"
description = "Converts audio from movies to text"
authors = ["Mohammad Reza Maleki <m.mlk9928@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
moviepy = "^1.0.3"
SpeechRecognition = "^3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
black = "^22.1.0"

[tool.poetry.scripts]
vtt_run = 'video_to_text.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true 
follow_imports = "silent"
strict = true 

[tool.isort]
profile = "black"
